<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.PlayerActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:scaleType="fitXY"
        android:src="@drawable/music_bg_1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center"
            android:elevation="10dp"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintHeight_percent="0.6"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back_btn"
                android:src="@drawable/back_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black"
                tools:ignore="NestedWeights" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/world_of_music"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHorizontal_bias="0.98"
                android:background="@android:color/transparent"
                android:src="@drawable/favorite_empty_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@android:color/holo_red_dark" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/songImgPA"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHeight_percent="0.35"
            android:src="@drawable/music_logo"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/songNamePA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/curved"
            app:strokeColor="@color/color1"
            app:strokeWidth="5dp" />


        <TextView
            android:id="@+id/songNamePA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/song_name"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            tools:layout_editor_absoluteX="20dp" />


        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            tools:layout_editor_absoluteX="10dp">

            <ImageView
                android:id="@+id/previousBtnPA"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="2.1"
                android:src="@drawable/previous_icon_1" />

            <ImageView
                android:id="@+id/playPauseBtnPA"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="25dp"
                android:layout_weight="1"
                android:src="@drawable/pause_icon_1" />

            <ImageView
                android:id="@+id/nextBtnPA"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="2.1"
                android:src="@drawable/next_icon_1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            tools:layout_editor_absoluteX="20dp">

            <TextView
                android:id="@+id/tvseekbarStart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/start_tv"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seekbarPA"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tvseekbarEnd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/end_tv"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/repeatBtnPA"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/repeat_btn"
                android:src="@drawable/repeat_icon"
                app:tint="@color/color3" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/equalizer_btn"
                android:src="@drawable/equalizer_icon"
                app:tint="@color/color4" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/timer_btn"
                android:src="@drawable/timer_icon"
                app:tint="@color/color2" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/share_btn"
                android:src="@drawable/share_icon"
                app:tint="@color/color1" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>